planning: view: fixed CNF & DLV border alignment.

--- a/frontend/app/planning/assets/plan.css
+++ b/frontend/app/planning/assets/plan.css
@@ -106,6 +106,7 @@
 }
 .planning-mrp-list-item {
   height: 25px;
+  line-height: 25px;
   font-size: 14px;
   background-color: #fff;
   border-right: 1px solid #ccc;
@@ -143,7 +144,7 @@
   color: #333;
 }
 .planning-mrp-list-item-label {
-  height: 22px;
+  height: 24px;
 }
 .is-ignored .planning-mrp-list-item-label {
   text-decoration: line-through;
@@ -153,7 +154,6 @@
 }
 .planning-mrp-list-item-inner {
   padding: 0 5px;
-  line-height: 24px;
 }
 .planning-mrp-list-item.is-order {
   min-width: 72px;
@@ -167,20 +167,20 @@
   justify-content: center;
 }
 .planning-mrp-list-item-inner.is-cnf {
-  line-height: 23px;
+  height: 24px;
+  line-height: 24px;
   border-top: 1px solid #AA00FF;
 }
 .planning-mrp-list-item-inner.is-dlv {
-  line-height: 23px;
+  height: 24px;
+  line-height: 24px;
   border-bottom: 1px solid #FF007F;
-}
-.planning-mrp-list-item-inner.is-cnf.is-dlv {
-  line-height: 22px;
 }
 .is-selected > .is-cnf,
 .is-selected > .is-dlv,
 .is-selected > .is-cnf.is-dlv {
-  line-height: 24px;
+  line-height: 25px;
+  height: 25px;
   border-top: 0;
   border-bottom: 0;
 }
